--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://shivanshtandon.github.io/NewsApp",
+  "homepage": "https://github.com/shivanshtandon/NewsMonkey-React",
   "name": "newsapp",
   "version": "0.1.0",
   "private": true,
